Another quick fix for overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ html.sr .load-hidden {
 }
 
 html {
-  overflow-x: hidden !important;
-  overflow-x: -moz-hidden-unscrollable !important;
+  overflow: hidden !important;
+  overflow: -moz-hidden-unscrollable !important;
 }
 
 /* Typography */
